--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "HOPE",
-  "version": "0.0.1",
-  "private": true,
+  "name": "JavaScript To ClojureScript",
+  "version": "0.0.2",
+  "private": false,
   "devDependencies": {
-    "shadow-cljs": "2.20.3"
+    "acorn": "^8.8.0",
+    "shadow-cljs": "^2.20.3"
   },
   "dependencies": {
-    "acorn": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "scripts": {
+    "start": "shadow-cljs watch app"
   }
 }
